--- a/Code/MB_index.html
+++ b/Code/MB_index.html
@@ -158,7 +158,7 @@
                         </div>
                         <dl>
                             <dt>米兔儿童滑板车，双弹簧重力转向系统 </dt>
-                            <dd class="price"><i>￥199</i><div class="Rt"><span class="scale">秒杀</span></div></dd>
+                            <dd class="price"><i>￥199</i><div class="Rt"><span>秒杀</span></div></dd>
                             <dd class="oldPrice">￥299</dd>
                             <dd class="seckilling"><span>您浏览过的商品正在秒杀</span></dd>
                         </dl>
@@ -171,7 +171,7 @@
                         </div>
                         <dl>
                             <dt>雷家智能窗帘，多种智能开合方式</dt>
-                            <dd class="price"><i>￥799</i><div class="Gt"><span class="scale">新品</span></div></dd>
+                            <dd class="price"><i>￥799</i><div class="Gt"><span>新品</span></div></dd>
                             <dd class="oldPrice">￥899</dd>
                             <dd class="history"><span>您的浏览足迹</span></dd>
                         </dl>
@@ -185,7 +185,7 @@
                         <dl>
                             <dt>雷侠氮化镓GaN充电器
                                 Type-C 65W</dt>
-                            <dd class="price"><i>￥1699</i><div class="Rt"><span class="scale">秒杀</span></div></dd>
+                            <dd class="price"><i>￥1699</i><div class="Rt"><span>秒杀</span></div></dd>
                             <dd class="oldPrice">￥2000</dd>
                             <dd class="seckilling"><span>您浏览过的商品正在秒杀</span></dd>
                         </dl>
@@ -198,7 +198,7 @@
                         </div>
                         <dl>
                             <dt>雷家智能窗帘，多种智能开合方式</dt>
-                            <dd class="price"><i>￥799</i><div class="Rt"><span class="scale">包邮</span></div></dd>
+                            <dd class="price"><i>￥799</i><div class="Rt"><span>包邮</span></div></dd>
                             <dd class="oldPrice">￥299</dd>
                             <dd class="history"><span>您的浏览足迹</span></dd>
                         </dl>
@@ -223,7 +223,7 @@
                         </div>
                         <dl>
                             <dt>Redmi充电宝 20000mAh 快充版</dt>
-                            <dd class="price"><i>￥94</i><div class="Rt new"><span class="scale">新人价</span></div></dd>
+                            <dd class="price"><i>￥94</i><div class="Rt new"><span>新人价</span></div></dd>
                             <dd class="oldPrice">￥99</dd>
                         </dl>
                     </a>
@@ -235,7 +235,7 @@
                         </div>
                         <dl>
                             <dt>小米智能门锁 推拉式，适用于标准锁体和霸王锁体</dt>
-                            <dd class="price"><i>￥1699</i><div class="Rt"><span class="scale">秒杀</span></div></dd>
+                            <dd class="price"><i>￥1699</i><div class="Rt"><span>秒杀</span></div></dd>
                             <dd class="oldPrice">￥2000</dd>
                             <dd class="seckilling"><span>您浏览过的商品正在秒杀</span></dd>
                         </dl>
@@ -248,7 +248,7 @@
                         </div>
                         <dl>
                             <dt>米兔儿童滑板车，双弹簧重力转向系统 </dt>
-                            <dd class="price"><i>￥199</i><div class="Rt"><span class="scale">秒杀</span></div></dd>
+                            <dd class="price"><i>￥199</i><div class="Rt"><span>秒杀</span></div></dd>
                             <dd class="oldPrice">￥299</dd>
                             <dd class="seckilling"><span>您浏览过的商品正在秒杀</span></dd>
                         </dl>
@@ -272,7 +272,7 @@
                         </div>
                         <dl>
                             <dt>雷侠车载充电器快充版1A1C 100W</dt>
-                            <dd class="price"><i>￥799</i><div class="Rt"><span class="scale">包邮</span></div></dd>
+                            <dd class="price"><i>￥799</i><div class="Rt"><span>包邮</span></div></dd>
                         </dl>
                     </a>
                 </div>
@@ -313,22 +313,6 @@
             ,anim: 'fade'
         });
         });
-
-        let span = document.querySelectorAll(".scale");
-
-        function myBrowser(){
-            var userAgent = navigator.userAgent;
-            if (userAgent.indexOf("Chrome") > -1){
-                for (let i=0;i<span.length;) {
-                    span[i++].classList.remove('scale');
-                }
-            } else {
-                for (let i=0;i<span.length;) {
-                    span[i++].classList.add('scale');
-                }
-            }
-        }
-        myBrowser();
     </script>
 </body>
 </html>
