--- a/Code/MB_index.html
+++ b/Code/MB_index.html
@@ -158,9 +158,9 @@
                         </div>
                         <dl>
                             <dt>米兔儿童滑板车，双弹簧重力转向系统 </dt>
-                            <dd class="price"><i>￥199</i><div class="Rt"><span>秒杀</span></div></dd>
+                            <dd class="price"><i>￥199</i><div class="Rt">秒杀</div></dd>
                             <dd class="oldPrice">￥299</dd>
-                            <dd class="seckilling"><span>您浏览过的商品正在秒杀</span></dd>
+                            <dd class="seckilling">您浏览过的商品正在秒杀</dd>
                         </dl>
                     </a>
                 </div>
@@ -171,9 +171,9 @@
                         </div>
                         <dl>
                             <dt>雷家智能窗帘，多种智能开合方式</dt>
-                            <dd class="price"><i>￥799</i><div class="Gt"><span>新品</span></div></dd>
+                            <dd class="price"><i>￥799</i><div class="Gt">新品</div></dd>
                             <dd class="oldPrice">￥899</dd>
-                            <dd class="history"><span>您的浏览足迹</span></dd>
+                            <dd class="history">您的浏览足迹</dd>
                         </dl>
                     </a>
                 </div>
@@ -185,9 +185,9 @@
                         <dl>
                             <dt>雷侠氮化镓GaN充电器
                                 Type-C 65W</dt>
-                            <dd class="price"><i>￥1699</i><div class="Rt"><span>秒杀</span></div></dd>
+                            <dd class="price"><i>￥1699</i><div class="Rt">秒杀</div></dd>
                             <dd class="oldPrice">￥2000</dd>
-                            <dd class="seckilling"><span>您浏览过的商品正在秒杀</span></dd>
+                            <dd class="seckilling">您浏览过的商品正在秒杀</dd>
                         </dl>
                     </a>
                 </div>
@@ -198,9 +198,9 @@
                         </div>
                         <dl>
                             <dt>雷家智能窗帘，多种智能开合方式</dt>
-                            <dd class="price"><i>￥799</i><div class="Rt"><span>包邮</span></div></dd>
+                            <dd class="price"><i>￥799</i><div class="Rt">包邮</div></dd>
                             <dd class="oldPrice">￥299</dd>
-                            <dd class="history"><span>您的浏览足迹</span></dd>
+                            <dd class="history">您的浏览足迹</dd>
                         </dl>
                     </a>
                 </div>
@@ -223,7 +223,7 @@
                         </div>
                         <dl>
                             <dt>Redmi充电宝 20000mAh 快充版</dt>
-                            <dd class="price"><i>￥94</i><div class="Rt new"><span>新人价</span></div></dd>
+                            <dd class="price"><i>￥94</i><div class="Rt new">新人价</div></dd>
                             <dd class="oldPrice">￥99</dd>
                         </dl>
                     </a>
@@ -235,9 +235,9 @@
                         </div>
                         <dl>
                             <dt>小米智能门锁 推拉式，适用于标准锁体和霸王锁体</dt>
-                            <dd class="price"><i>￥1699</i><div class="Rt"><span>秒杀</span></div></dd>
+                            <dd class="price"><i>￥1699</i><div class="Rt">秒杀</div></dd>
                             <dd class="oldPrice">￥2000</dd>
-                            <dd class="seckilling"><span>您浏览过的商品正在秒杀</span></dd>
+                            <dd class="seckilling">您浏览过的商品正在秒杀</dd>
                         </dl>
                     </a>
                 </div>
@@ -248,9 +248,9 @@
                         </div>
                         <dl>
                             <dt>米兔儿童滑板车，双弹簧重力转向系统 </dt>
-                            <dd class="price"><i>￥199</i><div class="Rt"><span>秒杀</span></div></dd>
+                            <dd class="price"><i>￥199</i><div class="Rt">秒杀</div></dd>
                             <dd class="oldPrice">￥299</dd>
-                            <dd class="seckilling"><span>您浏览过的商品正在秒杀</span></dd>
+                            <dd class="seckilling">您浏览过的商品正在秒杀</dd>
                         </dl>
                     </a>
                 </div>
@@ -272,7 +272,7 @@
                         </div>
                         <dl>
                             <dt>雷侠车载充电器快充版1A1C 100W</dt>
-                            <dd class="price"><i>￥799</i><div class="Rt"><span>包邮</span></div></dd>
+                            <dd class="price"><i>￥799</i><div class="Rt">包邮</div></dd>
                         </dl>
                     </a>
                 </div>
