--- a/Code/MB_PaySuccess.html
+++ b/Code/MB_PaySuccess.html
@@ -12,9 +12,7 @@
     <div class="header">
         <div class="top"></div>
         <div class="bottom">
-            <svg width="157.942" height="110.467" viewBox="0 0 157.942 110.467">
-                <path id="路径_1" data-name="路径 1" d="M2403.96,3236.607l40.8,40.815,81.125-81.679s8.211-5.776,14.752,1.044,1.044,14.4,1.044,14.4l-91.136,90.767a13.365,13.365,0,0,1-6.064,1.969,11.831,11.831,0,0,1-5.809-1.969l-51.019-51.269s-5-7.972,1.877-14.082S2403.96,3236.607,2403.96,3236.607Z" transform="translate(-2385.902 -3193.459)" fill="#fff"/>
-            </svg>            
+            <img src="./IMG/success.png" alt="">                   
         </div>
     </div>
     <div class="main">
