--- a/Code/MB_detail.html
+++ b/Code/MB_detail.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     <div class="header">
-        <button><img src="./IMG/return2.png" alt=""></button>
+        <button>
+            <a href="javascript:history.go(-1)"><img src="./IMG/return2.png" alt=""></a>
+        </button>
         <div class="search">
             <img src="./IMG/search2.png" alt="">
             <input type="text" name="" id="" placeholder="雷侠青春版">
