--- a/Code/PC_index.html
+++ b/Code/PC_index.html
@@ -321,14 +321,16 @@
         </div>
     </div>
     <div class="footer">
-        <div class="box">
-            <div class="logo">
-                <img src="./IMG/logo.png" alt="" class="top">
-                <img src="./IMG/logo2.png" alt="">
-            </div>
-            <div class="content">
-                Copyright © 2021 雷侠商城
-                Powered by 懵懵公主和她的雷雷骑士
+       <div class="container">
+            <div class="box">
+                <div class="logo">
+                    <img src="./IMG/logo.png" alt="" class="top">
+                    <img src="./IMG/logo2.png" alt="">
+                </div>
+                <div class="content">
+                    Copyright © 2021 雷侠商城
+                    Powered by 懵懵公主和她的雷雷骑士
+                </div>
             </div>
         </div>
     </div>
