--- a/Code/MB_login.html
+++ b/Code/MB_login.html
@@ -42,6 +42,8 @@
             let password = document.getElementById("password").value;
             if (username == 'leixia' && password == '123456') {
                 window.location.href = 'MB_user.html'
+            } else {
+                alert('账号或密码错误')
             }
         })
     </script>
