--- a/Code/MB_register.html
+++ b/Code/MB_register.html
@@ -19,16 +19,19 @@
     <div class="form">
         <form action="#">
             <div class="name">
-                <img src="./IMG/name.png" alt="">
-                <input type="text" required placeholder="name">
+                <img src="./IMG/name.png" alt="" class="img">
+                <input type="text" required id="username" class="input">
+                <label for="username">name</label>
             </div>
             <div class="password">
-                <img src="./IMG/password.png" alt="">
-                <input type="password" required placeholder="password">
+                <img src="./IMG/password.png" alt="" class="img">
+                <input type="password" required id="password" class="input">
+                <label for="password">password</label>
             </div>
             <div class="confirm">
-                <img src="./IMG/password.png" alt="">
-                <input type="password" required placeholder="Enter the password again">
+                <img src="./IMG/password.png" alt="" class="img">
+                <input type="password" required id="password" class="input">
+                <label for="password">Enter the password again</label>
             </div>
             <button type="button" class="register">REGISTER</button>
             <p><a href="./MB_login.html">Already have an account</a></p>
