--- a/Code/MB_login.html
+++ b/Code/MB_login.html
@@ -20,13 +20,14 @@
         <form action="#" method="POST">
             <div class="name">
                 <img src="./IMG/name.png" alt="" class="img">
-                <input type="text" required id="username" class="input" placeholder="name">
+                <input type="text" required id="username" class="input">
+                <label for="username">name</label>
             </div>
             <div class="password">
                 <img src="./IMG/password.png" alt="" class="img">
-                <input type="password" required id="password" class="input" placeholder="password">
+                <input type="password" required id="password" class="input">
+                <label for="password">password</label>
             </div>
-
             <button type="button" class="login" id="login">LOGIN</button>
             <p><a href="#">Forget your password?</a></p>
             <button type="button" class="register">
