--- a/Code/MB_login.html
+++ b/Code/MB_login.html
@@ -36,6 +36,7 @@
         </form>
     </div>
     <script src="./JS/rem.js"></script>
+    <script src="./JS/input.js"></script>
     <script>
         let login = document.getElementById("login");
         login.addEventListener('click',function(){
